# p2-publishing-tool

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Credits.txt  LICENSE.md  P2Publish.cpp  README.md  STYLE.md  elements.kv
.github/workflows/: build.yml
CMakeModules/: ICU.cmake  Qt.cmake  Steam.cmake
dialogs/: P2BSPReader.h  P2DialogConfig.h  P2DiscordWebhook.h  P2ElementParser.cpp  P2ElementParser.h  P2LoopManager.h  P2MapMainWindow.cpp  P2MapMainWindow.h  P2MapPublisher.cpp  P2MapPublisher.h  P2PTIDialog.h  P2PublisherAdvancedOptions.h
libs/: Steam-API
libs/ICU/: Readme.txt
libs/Qt/: Readme.txt
libs/Steam-Workshop-API/: Readme.txt
libs/theme/: breeze.qrc
libs/theme/dark/: stylesheet.qss
libs/theme/dark-green/: stylesheet.qss
libs/theme/dark-purple/: stylesheet.qss
libs/theme/light/: stylesheet.qss
libs/theme/light-green/: stylesheet.qss
libs/theme/light-purple/: stylesheet.qss
res/: appicon.rc  resource.qrc  style.qss  zoo_textures.qrc
src/: CMakeLists.txt  P2Publish.cpp  bspentityelementparser.cpp  bspentityelementparser.h  bspfilestructure.h  filedialogpreset.h  main.cpp  mainview.cpp  mainview.h  mapuploader.cpp  mapuploader.h
src/dialogs/: P2DialogConfig.h  P2MapMainWindow.cpp  P2MapPublisher.h  P2PTIDialog.h
